Correct alignment of the not-found message
The center alignment wasn't being correctly applied to the .not-found
children. Also applied a style to the link to show a difference to
the standard text colour.

The link can't be clicked though because the tooltip closes to quickly.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -79,7 +79,15 @@
     }
     .not-found
     {
-        text-align: center;
+        p
+        {
+            text-align: center;
+        }
+        a
+        {
+            cursor: pointer;
+            color: royalblue;
+        }
         .large
         {
             font-size: 50px;
